--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="feels-like displaying">
+                <!-- <div class="feels-like displaying">
                     <img src="src/Imges/cloud.png" alt="Cloud">
-                </div>
+                </div> -->
             </div>
         </section>
 
