--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
             </div>
 
-            <div class="toggle-content height__full">
+            <div class="toggle-content">
 
                 <div class="content" id="Content">
                     <ul>
