--- a/src/Pages/temp.html
+++ b/src/Pages/temp.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Temperature </title>
-    <link rel="icon" type="image/x-icon" href="src/Imges/bijli 2.png">
+    <link rel="icon" type="image/x-icon" href="../Imges/bijli 2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="../Style Sheet/style.css" />
     <link rel="stylesheet" href="../Style Sheet/media.css" />
     <link rel="stylesheet" href="../Style Sheet/temp.css" />
     <script type="module" src="../JS/functioality.js"></script>
+    <script type="module" src="../JS/script.js"></script>
 </head>
 
 <body>
@@ -161,25 +163,324 @@
             </div>
         </section>
 
+        <section id="sectionInfo">
+            <div class="section-name ">
+                <h2>Comming Days Information</h2>
+            </div>
+        </section>
+
 
         <section id="Section1">
+            <div class="day-and-date ">
+                <div class="day-info">
+                    <h2>Tuesday</h2>
+                    <p>DESCRIPTION: <span class="day__discription">Its raining today</span></p>
+                </div>
+                <div class="day-image">
+                    <img src="../Imges/sunrise-removebg-preview.png" alt="">
+                </div>
+            </div>
 
-            fdsafdsafasfdsf
+            <div class="divider"></div>
+
+            <div class="weather-info">
+                <div class="temp1 temp weather-styling ">
+                    <h4><span>Temp: </span>30°C</h4>
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+
+                <div class="feels__like1 feels__like weather-styling">
+                    <h4><span>Feels Like: </span>30°C</h4>
+
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+                <div class="wind__speed1 wind__speed weather-styling">
+                    <h4>30°C</h4>
+                    <h6>WindSpeed</h6>
+
+                </div>
+
+                <div class="sunrise1 sunrise weather-styling">
+                    <h4>06: 14 AM</h4>
+                    <h6>Sunrise</h6>
+                </div>
+
+                <div class="sunset1 sunset weather-styling border-0 p-0">
+                    <h4>05 : 38 PM</h4>
+                    <h6>Sunset</h6>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+            <div class="temp-chart weekdays-card">
+                <canvas id="myChart" height="50%" width="100%"></canvas>
+            </div>
         </section>
+
         <section id="Section2">
+            <div class="day-and-date ">
+                <div class="day-info">
+                    <h2>Wednesday</h2>
+                    <p>DESCRIPTION: <span class="day__discription">Its raining today</span></p>
+                </div>
+                <div class="day-image">
+                    <img src="../Imges/sunrise-removebg-preview.png" alt="">
+                </div>
+            </div>
 
-            fdsafdsafasfdsf
+            <div class="divider"></div>
+
+            <div class="weather-info">
+                <div class="temp2 temp weather-styling ">
+                    <h4><span>Temp: </span>30°C</h4>
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+
+                <div class="feels__like2 feels__like weather-styling">
+                    <h4><span>Feels Like: </span>30°C</h4>
+
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+                <div class="wind__speed2 wind__speed weather-styling">
+                    <h4>30°C</h4>
+                    <h6>WindSpeed</h6>
+
+                </div>
+
+                <div class="sunrise2 sunrise weather-styling">
+                    <h4>06: 14 AM</h4>
+                    <h6>Sunrise</h6>
+                </div>
+
+                <div class="sunset2 sunset weather-styling border-0 p-0">
+                    <h4>05 : 38 PM</h4>
+                    <h6>Sunset</h6>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="temp-chart weekdays-card">
+                <canvas id="myChart" height="50%" width="100%"></canvas>
+            </div>
         </section>
+
         <section id="Section3">
+            <div class="day-and-date ">
+                <div class="day-info">
+                    <h2>Thursday</h2>
+                    <p>DESCRIPTION: <span class="day__discription">Its raining today</span></p>
+                </div>
+                <div class="day-image">
+                    <img src="../Imges/sunrise-removebg-preview.png" alt="">
+                </div>
+            </div>
 
-            fdsafdsafasfdsf
+            <div class="divider"></div>
+
+            <div class="weather-info">
+                <div class="temp3 temp weather-styling ">
+                    <h4><span>Temp: </span>30°C</h4>
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+                <div class="feels__like3 feels__like weather-styling">
+                    <h4><span>Feels Like: </span>30°C</h4>
+
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+                <div class="wind__speed3 wind__speed weather-styling">
+                    <h4>30°C</h4>
+                    <h6>WindSpeed</h6>
+
+                </div>
+
+                <div class="sunrise3 sunrise weather-styling">
+                    <h4>06: 14 AM</h4>
+                    <h6>Sunrise</h6>
+                </div>
+
+                <div class="sunset3 sunset weather-styling border-0 p-0">
+                    <h4>05 : 38 PM</h4>
+                    <h6>Sunset</h6>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="temp-chart weekdays-card">
+                <canvas id="myChart" height="50%" width="100%"></canvas>
+            </div>
         </section>
-        <section id="Section4">
 
-            fdsafdsafasfdsf
+        <section id="Section4">
+            <div class="day-and-date ">
+                <div class="day-info">
+                    <h2>Friday</h2>
+                    <p>DESCRIPTION: <span class="day__discription">Its raining today</span></p>
+                </div>
+                <div class="day-image">
+                    <img src="../Imges/sunrise-removebg-preview.png" alt="">
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="weather-info">
+                <div class="temp4 temp weather-styling ">
+                    <h4><span>Temp: </span>30°C</h4>
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+
+                <div class="feels__like4 feels__like weather-styling">
+                    <h4><span>Feels Like: </span>30°C</h4>
+
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+                <div class="wind__speed4 wind__speed weather-styling">
+                    <h4>30°C</h4>
+                    <h6>WindSpeed</h6>
+
+                </div>
+
+                <div class="sunrise4 sunrise weather-styling">
+                    <h4>06: 14 AM</h4>
+                    <h6>Sunrise</h6>
+                </div>
+
+                <div class="sunset4 sunset weather-styling border-0 p-0">
+                    <h4>05 : 38 PM</h4>
+                    <h6>Sunset</h6>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="temp-chart weekdays-card">
+                <canvas id="myChart" height="50%" width="100%"></canvas>
+            </div>
+        </section>
+
+        <section id="Section5">
+            <div class="day-and-date ">
+                <div class="day-info">
+                    <h2>Saturday</h2>
+                    <p>DESCRIPTION: <span class="day__discription">Its raining today</span></p>
+                </div>
+                <div class="day-image">
+                    <img src="../Imges/sunrise-removebg-preview.png" alt="">
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="weather-info">
+                <div class="temp5 temp weather-styling ">
+                    <h4><span>Temp: </span>30°C</h4>
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+
+                <div class="feels__like5 feels__like weather-styling">
+                    <h4><span>Feels Like: </span>30°C</h4>
+
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+                <div class="wind__speed5 wind__speed weather-styling">
+                    <h4>30°C</h4>
+                    <h6>WindSpeed</h6>
+
+                </div>
+
+                <div class="sunrise5 sunrise weather-styling">
+                    <h4>06: 14 AM</h4>
+                    <h6>Sunrise</h6>
+                </div>
+
+                <div class="sunset5 sunset weather-styling border-0 p-0">
+                    <h4>05 : 38 PM</h4>
+                    <h6>Sunset</h6>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="temp-chart weekdays-card">
+                <canvas id="myChart"></canvas>
+            </div>
+        </section>
+
+        <section id="Section6">
+            <div class="day-and-date ">
+                <div class="day-info">
+                    <h2>Sunday</h2>
+                    <p>DESCRIPTION: <span class="day__discription">Its raining today</span></p>
+                </div>
+                <div class="day-image">
+                    <img src="../Imges/sunrise-removebg-preview.png" alt="">
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="weather-info">
+                <div class="temp6 temp weather-styling ">
+                    <h4><span>Temp: </span>30°C</h4>
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+
+                <div class="feels__like6 feels__like weather-styling">
+                    <h4><span>Feels Like: </span>30°C</h4>
+
+                    <h6>High: <span>40°C</span></h6>
+                    <h6>low: <span>20°C</span></h6>
+                </div>
+
+                <div class="wind__speed6 wind__speed weather-styling">
+                    <h4>30°C</h4>
+                    <h6>WindSpeed</h6>
+
+                </div>
+
+                <div class="sunrise6 sunrise weather-styling">
+                    <h4>06: 14 AM</h4>
+                    <h6>Sunrise</h6>
+                </div>
+
+                <div class="sunset6 sunset weather-styling border-0 p-0">
+                    <h4>05 : 38 PM</h4>
+                    <h6>Sunset</h6>
+                </div>
+            </div>
+
+            <div class="divider"></div>
+
+            <div class="temp-chart weekdays-card">
+                <canvas id="myChart" height="50%" width="100%"></canvas>
+            </div>
+
         </section>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 
 </html>
