--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="src/Style Sheet/media.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="src/JS/functioality.js"></script>
-    <script type="module" src="src/JS/script.js"></script>
+    <script type="module" src="src/JS/controller.js"></script>
 </head>
 
 <body>
@@ -258,8 +258,8 @@
                 <h3>Neighbour City</h3>
             </div>
 
-            <div id="dayEvents" class="city-weather">
-                <div id="RISE" class="city-info">
+            <div id="dayEvents" class=" row gap-3">
+                <div id="RISE" class="col city-info">
                     <div class="city-content">
                         <h3>12°C</h3>
                         <h5>USA</h5>
@@ -268,7 +268,7 @@
                         <img src="src/Imges/sunrise-removebg-preview.png" alt="Cloud">
                     </div>
                 </div>
-                <div id="SET" class="city-info">
+                <div id="SET" class="col city-info">
                     <div class="city-content">
                         <h3>12°C</h3>
                         <h5>USA</h5>
@@ -277,7 +277,7 @@
                         <img src="src/Imges/sunset.png" alt="Cloud">
                     </div>
                 </div>
-                <div id="UV" class="city-info">
+                <div id="UV" class="col city-info">
                     <div class="city-content">
                         <h3>12°C</h3>
                         <h5>USA</h5>
@@ -286,7 +286,7 @@
                         <i style="color: #eca914; font-size: 3rem;" class="fa-solid fa-wind"></i>
                     </div>
                 </div>
-                <div id="WIND" class="city-info">
+                <div id="WIND" class="col city-info">
                     <div class="city-content">
                         <h3>12°C</h3>
                         <h5>USA</h5>
