--- a/src/Pages/weekDaysSection.html
+++ b/src/Pages/weekDaysSection.html
@@ -12,10 +12,12 @@
         integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="../Style Sheet/style.css" />
-    <link rel="stylesheet" href="../Style Sheet/temp.css" />
-    <link rel="stylesheet" href="../Style Sheet/media.css" />
     <script type="module" src="../JS/functioality.js"></script>
+    <link rel="stylesheet" href="../Style Sheet/style.css" />
+    <link rel="stylesheet" href="../Style Sheet/weekDaysSection.css" />
+    <link rel="stylesheet" href="../Style Sheet/media.css" />
+    <script type="module" src="../JS/weekdaysSection.js"></script>
+
 </head>
 
 <body>
