--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="src/Pages/temp.html" class="coloring">
+                            <a href="src/Pages/weekDaysSection.html" class="coloring">
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="fa-solid fa-temperature-quarter"></i>
                                     <h5>Weekdays Info</h3>
@@ -117,7 +117,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="src/Pages/temp.html">
+                        <a href="src/Pages/weekDaysSection.html">
                             <i class="fa-solid fa-temperature-quarter"></i>
                         </a>
                     </li>
