--- a/src/Pages/weekDaysSection.html
+++ b/src/Pages/weekDaysSection.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Temperature </title>
+    <title>Comming Days Information </title>
     <link rel="icon" type="image/x-icon" href="../Imges/bijli 2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../Style Sheet/style.css" />
     <link rel="stylesheet" href="../Style Sheet/weekDaysSection.css" />
     <link rel="stylesheet" href="../Style Sheet/media.css" />
+    <script type="module" src="../JS/weekDaysSection.js"></script>
 
 </head>
 
@@ -56,7 +57,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="temp.html" class="coloring">
+                            <a href="weekDaysSection.html" class="coloring">
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="fa-solid fa-temperature-quarter"></i>
                                     <h5>Weekdays Info</h3>
@@ -118,7 +119,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="temp.html">
+                        <a href="weekDaysSection.html">
                             <i class="fa-solid fa-temperature-quarter"></i>
                         </a>
                     </li>
