Section 2 Data rendering Completed

--- a/src/Pages/weekDaysSection.html
+++ b/src/Pages/weekDaysSection.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="../Style Sheet/style.css" />
     <link rel="stylesheet" href="../Style Sheet/weekDaysSection.css" />
     <link rel="stylesheet" href="../Style Sheet/media.css" />
-    <script type="module" src="../JS/weekDaysSection.js"></script>
+    <script type="module" src="../JS/controller.js"></script>
 
 </head>
 
@@ -99,7 +99,6 @@
 
         </div>
     </div>
-
 
     <div class="temp--dashboard dashboard">
 
@@ -186,22 +185,48 @@
             <div class="row weather-info">
 
                 <div class=" col text-center temp1 temp weather-styling ">
-                    <h4><span>Temp: </span>30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Feels Like: </span>30°C</h4>
-
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        34°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Other Data: </span> 30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        34°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
 
@@ -212,7 +237,7 @@
             <div class="row mb-md-0">
 
                 <div class="col-12 col-md temp-chart weekdays-card">
-                    <canvas id="myChart2"></canvas>
+                    <canvas id="myChart1"></canvas>
                 </div>
 
                 <div class="divider d-md-none"></div>
@@ -259,22 +284,48 @@
             <div class="row weather-info">
 
                 <div class=" col text-center temp1 temp weather-styling ">
-                    <h4><span>Temp: </span>30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Feels Like: </span>30°C</h4>
-
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        34°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Other Data: </span> 30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        34°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
 
@@ -285,7 +336,7 @@
             <div class="row mb-md-0">
 
                 <div class="col-12 col-md temp-chart weekdays-card">
-                    <canvas id="myChart2"></canvas>
+                    <canvas id="myChart1"></canvas>
                 </div>
 
                 <div class="divider d-md-none"></div>
@@ -332,22 +383,48 @@
             <div class="row weather-info">
 
                 <div class=" col text-center temp1 temp weather-styling ">
-                    <h4><span>Temp: </span>30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Feels Like: </span>30°C</h4>
-
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        34°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Other Data: </span> 30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        34°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
 
@@ -358,7 +435,7 @@
             <div class="row mb-md-0">
 
                 <div class="col-12 col-md temp-chart weekdays-card">
-                    <canvas id="myChart2"></canvas>
+                    <canvas id="myChart1"></canvas>
                 </div>
 
                 <div class="divider d-md-none"></div>
@@ -405,22 +482,48 @@
             <div class="row weather-info">
 
                 <div class=" col text-center temp1 temp weather-styling ">
-                    <h4><span>Temp: </span>30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Feels Like: </span>30°C</h4>
-
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        34°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Other Data: </span> 30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        34°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
 
@@ -431,7 +534,7 @@
             <div class="row mb-md-0">
 
                 <div class="col-12 col-md temp-chart weekdays-card">
-                    <canvas id="myChart2"></canvas>
+                    <canvas id="myChart1"></canvas>
                 </div>
 
                 <div class="divider d-md-none"></div>
@@ -478,22 +581,48 @@
             <div class="row weather-info">
 
                 <div class=" col text-center temp1 temp weather-styling ">
-                    <h4><span>Temp: </span>30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Feels Like: </span>30°C</h4>
-
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        34°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Other Data: </span> 30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        34°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
 
@@ -504,7 +633,7 @@
             <div class="row mb-md-0">
 
                 <div class="col-12 col-md temp-chart weekdays-card">
-                    <canvas id="myChart2"></canvas>
+                    <canvas id="myChart1"></canvas>
                 </div>
 
                 <div class="divider d-md-none"></div>
@@ -551,22 +680,48 @@
             <div class="row weather-info">
 
                 <div class=" col text-center temp1 temp weather-styling ">
-                    <h4><span>Temp: </span>30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Feels Like: </span>30°C</h4>
-
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        23°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        34°C
+                    </h6>
                 </div>
 
                 <div class=" col text-center feels__like1 feels__like weather-styling">
-                    <h4><span>Other Data: </span> 30°C</h4>
-                    <h6>High: <span>40°C</span></h6>
-                    <h6>low: <span>20°C</span></h6>
+                    <h4>
+                        <span>Temp: </span>
+                        34°C
+                    </h4>
+                    <h6>
+                        <span> High: </span>
+                        34°C
+                    </h6>
+                    <h6>
+                        <span>low: </span>
+                        23°C
+                    </h6>
                 </div>
 
 
@@ -577,7 +732,7 @@
             <div class="row mb-md-0">
 
                 <div class="col-12 col-md temp-chart weekdays-card">
-                    <canvas id="myChart2"></canvas>
+                    <canvas id="myChart1"></canvas>
                 </div>
 
                 <div class="divider d-md-none"></div>
