--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="src/Style Sheet/media.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="src/JS/functioality.js"></script>
-    <script type="module" src="src/JS/heroSection.js"></script>
+    <script type="module" src="src/JS/controller.js"></script>
 </head>
 
 <body>
@@ -297,7 +297,6 @@
                 </div>
             </div>
         </section>
-
     </div>
 </body>
 
