--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="coloring">
+                            <a href="src/Pages/map.html" class="coloring">
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="fa-solid fa-location-dot"></i>
                                     <h5>Map</h3>
@@ -73,7 +73,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="coloring">
+                            <a href="src/Pages/calander.html" class="coloring">
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="fa-solid fa-calendar"></i>
                                     <h5>Calendar</h3>
@@ -122,12 +122,12 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="src/Pages/map.html">
                             <i class="fa-solid fa-location-dot"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="src/Pages/calander.html">
                             <i class="fa-solid fa-calendar"></i>
                         </a>
                     </li>
