--- a/src/Pages/weekDaysSection.html
+++ b/src/Pages/weekDaysSection.html
@@ -66,7 +66,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="coloring">
+                            <a href="map.html" class="coloring">
                                 <div class="d-flex align-items-center gap-2">
                                     <i class="fa-solid fa-location-dot"></i>
                                     <h5>Map</h3>
@@ -123,7 +123,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="map.html">
                             <i class="fa-solid fa-location-dot"></i>
                         </a>
                     </li>
